@@ -39,7 +39,6 @@ import com.github.javydreamercsw.management.domain.wrestler.Wrestler;
 import com.github.javydreamercsw.management.domain.wrestler.WrestlerRepository;
 import com.github.javydreamercsw.management.service.campaign.CampaignService;
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -99,7 +98,7 @@ class AdvancedCampaignE2ETest extends AbstractE2ETest {
     Title title = titleRepository.findAll().get(0);
     TitleReign reign = new TitleReign();
     reign.setTitle(title);
-    reign.setChampions(new ArrayList<>(Collections.singletonList(player)));
+    reign.setChampions(new java.util.LinkedHashSet<>(java.util.List.of(player)));
     reign.setStartDate(Instant.now());
     titleReignRepository.saveAndFlush(reign);
 
